--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1036,8 +1036,8 @@
 - func: empty.out(int[] size, *, MemoryFormat? memory_format=None, Tensor(a!) out) -> Tensor(a!)
   device_guard: False
 
-- func: empty_like(Tensor self, *, MemoryFormat? memory_format=None) -> Tensor
-  # use_c10_dispatcher: full
+- func: empty_like(Tensor self) -> Tensor
+  use_c10_dispatcher: full
   device_guard: False
   supports_named_tensor: True
 
