--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -337,9 +337,9 @@ jobs:
             NAMED_FLAG="export BUILD_NAMEDTENSOR=1"
           fi
 
-          if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
+          if [[ ${BUILD_ENVIRONMENT} == *"paralleltbb"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
-          elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
+          elif [[ ${BUILD_ENVIRONMENT} == *"parallelnative"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE "
           fi
           echo "Parallel backend flags: "${PARALLEL_FLAGS}
@@ -397,9 +397,9 @@ jobs:
           else
             export COMMIT_DOCKER_IMAGE=$output_image
           fi
-          if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
+          if [[ ${BUILD_ENVIRONMENT} == *"paralleltbb"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
-          elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
+          elif [[ ${BUILD_ENVIRONMENT} == *"parallelnative"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE ß"
           fi
           echo "Parallel backend flags: "${PARALLEL_FLAGS}
@@ -1626,31 +1626,31 @@ workflows:
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.6-gcc5.4:347"
           resource_class: large
       - pytorch_linux_build:
-          name: pytorch_parallel_tbb_linux_xenial_py3_6_gcc5_4_build
+          name: pytorch_paralleltbb_linux_xenial_py3_6_gcc5_4_build
           requires:
             - setup
-          build_environment: "pytorch-parallel_tbb-linux-xenial-py3.6-gcc5.4-build"
+          build_environment: "pytorch-paralleltbb-linux-xenial-py3.6-gcc5.4-build"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.6-gcc5.4:347"
       - pytorch_linux_test:
-          name: pytorch_parallel_tbb_linux_xenial_py3_6_gcc5_4_test
+          name: pytorch_paralleltbb_linux_xenial_py3_6_gcc5_4_test
           requires:
             - setup
-            - pytorch_parallel_tbb_linux_xenial_py3_6_gcc5_4_build
-          build_environment: "pytorch-parallel_tbb-linux-xenial-py3.6-gcc5.4-test"
+            - pytorch_paralleltbb_linux_xenial_py3_6_gcc5_4_build
+          build_environment: "pytorch-paralleltbb-linux-xenial-py3.6-gcc5.4-test"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.6-gcc5.4:347"
           resource_class: large
       - pytorch_linux_build:
-          name: pytorch_parallel_native_linux_xenial_py3_6_gcc5_4_build
+          name: pytorch_parallelnative_linux_xenial_py3_6_gcc5_4_build
           requires:
             - setup
-          build_environment: "pytorch-parallel_native-linux-xenial-py3.6-gcc5.4-build"
+          build_environment: "pytorch-parallelnative-linux-xenial-py3.6-gcc5.4-build"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.6-gcc5.4:347"
       - pytorch_linux_test:
-          name: pytorch_parallel_native_linux_xenial_py3_6_gcc5_4_test
+          name: pytorch_parallelnative_linux_xenial_py3_6_gcc5_4_test
           requires:
             - setup
-            - pytorch_parallel_native_linux_xenial_py3_6_gcc5_4_build
-          build_environment: "pytorch-parallel_native-linux-xenial-py3.6-gcc5.4-test"
+            - pytorch_parallelnative_linux_xenial_py3_6_gcc5_4_build
+          build_environment: "pytorch-parallelnative-linux-xenial-py3.6-gcc5.4-test"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.6-gcc5.4:347"
           resource_class: large
       - pytorch_linux_build:
@@ -1706,31 +1706,31 @@ workflows:
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3-clang5-asan:347"
           resource_class: large
       - pytorch_linux_build:
-          name: pytorch_parallel_tbb_linux_xenial_py3_clang5_asan_build
+          name: pytorch_paralleltbb_linux_xenial_py3_clang5_asan_build
           requires:
             - setup
-          build_environment: "pytorch-parallel_tbb-linux-xenial-py3-clang5-asan-build"
+          build_environment: "pytorch-paralleltbb-linux-xenial-py3-clang5-asan-build"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3-clang5-asan:347"
       - pytorch_linux_test:
-          name: pytorch_parallel_tbb_linux_xenial_py3_clang5_asan_test
+          name: pytorch_paralleltbb_linux_xenial_py3_clang5_asan_test
           requires:
             - setup
-            - pytorch_parallel_tbb_linux_xenial_py3_clang5_asan_build
-          build_environment: "pytorch-parallel_tbb-linux-xenial-py3-clang5-asan-test"
+            - pytorch_paralleltbb_linux_xenial_py3_clang5_asan_build
+          build_environment: "pytorch-paralleltbb-linux-xenial-py3-clang5-asan-test"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3-clang5-asan:347"
           resource_class: large
       - pytorch_linux_build:
-          name: pytorch_parallel_native_linux_xenial_py3_clang5_asan_build
+          name: pytorch_parallelnative_linux_xenial_py3_clang5_asan_build
           requires:
             - setup
-          build_environment: "pytorch-parallel_native-linux-xenial-py3-clang5-asan-build"
+          build_environment: "pytorch-parallelnative-linux-xenial-py3-clang5-asan-build"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3-clang5-asan:347"
       - pytorch_linux_test:
-          name: pytorch_parallel_native_linux_xenial_py3_clang5_asan_test
+          name: pytorch_parallelnative_linux_xenial_py3_clang5_asan_test
           requires:
             - setup
-            - pytorch_parallel_native_linux_xenial_py3_clang5_asan_build
-          build_environment: "pytorch-parallel_native-linux-xenial-py3-clang5-asan-test"
+            - pytorch_parallelnative_linux_xenial_py3_clang5_asan_build
+          build_environment: "pytorch-parallelnative-linux-xenial-py3-clang5-asan-test"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3-clang5-asan:347"
           resource_class: large
       - pytorch_linux_build:
