--- a/.circleci/verbatim-sources/pytorch-job-specs.yml
+++ b/.circleci/verbatim-sources/pytorch-job-specs.yml
@@ -49,9 +49,9 @@ jobs:
             NAMED_FLAG="export BUILD_NAMEDTENSOR=1"
           fi
 
-          if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
+          if [[ ${BUILD_ENVIRONMENT} == *"paralleltbb"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
-          elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
+          elif [[ ${BUILD_ENVIRONMENT} == *"parallelnative"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE "
           fi
           echo "Parallel backend flags: "${PARALLEL_FLAGS}
@@ -109,9 +109,9 @@ jobs:
           else
             export COMMIT_DOCKER_IMAGE=$output_image
           fi
-          if [[ ${BUILD_ENVIRONMENT} == *"parallel_tbb"* ]]; then
+          if [[ ${BUILD_ENVIRONMENT} == *"paralleltbb"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
-          elif [[ ${BUILD_ENVIRONMENT} == *"parallel_native"* ]]; then
+          elif [[ ${BUILD_ENVIRONMENT} == *"parallelnative"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE ß"
           fi
           echo "Parallel backend flags: "${PARALLEL_FLAGS}
