--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -338,7 +338,7 @@ jobs:
           fi
 
           if [[ ${BUILD_ENVIRONMENT} == *"paralleltbb"* ]]; then
-            export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
+            export PARALLEL_FLAGS="export ATEN_THREADING=TBB USE_TBB=1 "
           elif [[ ${BUILD_ENVIRONMENT} == *"parallelnative"* ]]; then
             export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE "
           fi
@@ -398,9 +398,9 @@ jobs:
             export COMMIT_DOCKER_IMAGE=$output_image
           fi
           if [[ ${BUILD_ENVIRONMENT} == *"paralleltbb"* ]]; then
-            export PARALLEL_FLAGS="export ATEN_THREADING=TBB && export USE_TBB=1 "
+            export PARALLEL_FLAGS="export ATEN_THREADING=TBB USE_TBB=1 "
           elif [[ ${BUILD_ENVIRONMENT} == *"parallelnative"* ]]; then
-            export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE ß"
+            export PARALLEL_FLAGS="export ATEN_THREADING=NATIVE "
           fi
           echo "Parallel backend flags: "${PARALLEL_FLAGS}
           echo "DOCKER_IMAGE: "${COMMIT_DOCKER_IMAGE}
