--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -278,11 +278,13 @@
 
 - func: add_relu.Tensor(Tensor self, Tensor other) -> Tensor
   use_c10_dispatcher: full
-  variants: function, method
+  variants: method
+  python_module: nn
   dispatch:
     QuantizedCPU: quantized_add_relu
 
 - func: add_relu.out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: nn
   dispatch:
     QuantizedCPU: quantized_add_relu_out
 
